# ctoml

./: .travis.yml  CMakeLists.txt  Makefile  README.md
src/: main.cc  toml.cc  tomlvalue.cc
src/include/: toml.h  tomlvalue.h
test/: Makefile
